--- a/index.html
+++ b/index.html
@@ -5,124 +5,140 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Recicla APP - Transformando Realidades</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+<head>
+	<title>Recicla APP - Transformando Realidades</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/custom.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo_bala.png" alt="" /></span>
-								</a>
+<body class="is-preload">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
+		<!-- Header -->
+		<header id="header">
+			<div class="inner">
 
-						</div>
-					</header>
+				<!-- Logo -->
+				<a href="index.html" class="logo">
+					<span class="symbol"><img src="images/logo_bala.png" alt="" /></span>
+				</a>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="#">Home</a></li>
-							<li><a href="#">Login</a></li>
-							<li><a href="#">Instituições</a></li>
-							<li><a href="#">Parceiros</a></li>
-							<li><a href="#">Produtos</a></li>
-						</ul>
-					</nav>
+				<!-- Nav -->
+				<nav>
+					<ul>
+						<li><a href="#menu">Menu</a></li>
+					</ul>
+				</nav>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<h1><br />
-									Localize postos de reciclagem e coleta seletiva próximos de você!</a></h1>
-								<p>Acumule pontos na plataforma e troque por diversos prêmios em empresas parceiras.
-								</p>
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="#">
-										<h2>Pontos de Coleta</h2>
-										<div class="content">
-											<p>Localize postos de reciclagem e coleta seletiva próximos de você!</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="#">
-										<h2>Acumule Pontos</h2>
-										<div class="content">
-											<p>Acumule pontos na plataforma e troque por diversos prêmios em empresas parceiras</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="#">
-										<h2>Adquira Produtos</h2>
-										<div class="content">
-											<p>Adquira diversos prêmios em empresas parceiras</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/mem1.jpeg" alt="" />
-									</span>
-									<a href="#">
-										<h2>Pedro</h2>
-										<!-- <div class="content">
+			</div>
+		</header>
+
+		<!-- Menu -->
+		<nav id="menu">
+			<h2>Menu</h2>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Login</a></li>
+				<li><a href="#">Instituições</a></li>
+				<li><a href="#">Parceiros</a></li>
+				<li><a href="#">Produtos</a></li>
+			</ul>
+		</nav>
+
+		<!-- Main -->
+		<div id="main">
+			<div class="inner">
+				<header>
+					<h1><br />
+						Localize postos de reciclagem e coleta seletiva próximos de você!</a></h1>
+					<p>Acumule pontos na plataforma e troque por diversos prêmios em empresas parceiras.
+					</p>
+				</header>
+				<section class="tiles">
+					<article class="style1">
+						<span class="image">
+							<img src="images/pic01.jpg" alt="" />
+						</span>
+						<a href="#">
+							<h2>Pontos de Coleta</h2>
+							<div class="content">
+								<p>Localize postos de reciclagem e coleta seletiva próximos de você!</p>
+							</div>
+						</a>
+					</article>
+					<article class="style2">
+						<span class="image">
+							<img src="images/pic02.jpg" alt="" />
+						</span>
+						<a href="#">
+							<h2>Acumule Pontos</h2>
+							<div class="content">
+								<p>Acumule pontos na plataforma e troque por diversos prêmios em empresas parceiras</p>
+							</div>
+						</a>
+					</article>
+					<article class="style3">
+						<span class="image">
+							<img src="images/pic03.jpg" alt="" />
+						</span>
+						<a href="#">
+							<h2>Adquira Produtos</h2>
+							<div class="content">
+								<p>Adquira diversos prêmios em empresas parceiras</p>
+							</div>
+						</a>
+					</article>
+					<article class="style4 team">
+						<span class="image">
+							<img src="images/mem1.jpeg" alt="" />
+						</span>
+						<a href="#">
+							<h2>Pedro</h2>
+							<!-- <div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div> -->
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-									</span>
-									<a href="#">
-										<h2>Pedro</h2>
-										<!-- <div class="content">
+						</a>
+					</article>
+					<article class="style5 team">
+						<span class="image">
+							<img src="images/mem3.jpg" alt="">
+						</span>
+						<a href="#">
+							<h2>Wanderson</h2>
+							<!-- <div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div> -->
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/mem2.jpeg" alt="" />
-									</span>
-									<a href="#">
-										<h2>Walber</h2>
-										<!-- <div class="content">
+						</a>
+					</article>
+					<article class="style6 team">
+						<span class="image">
+							<img src="images/mem2.jpeg" alt="" />
+						</span>
+						<a href="#">
+							<h2>Walber</h2>
+							<!-- <div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div> -->
-									</a>
-								</article>
-								<!-- <article class="style6">
+						</a>
+					</article>
+					<article class="style7 team">
+						<span class="image">
+							<img src="images/mem4.jpeg" alt="" />
+						</span>
+						<a href="#">
+							<h2>Rodrigo</h2>
+							<!-- <div class="content">
+													<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+												</div> -->
+						</a>
+					</article>
+					<!-- <article class="style6">
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
@@ -133,54 +149,58 @@
 										</div>
 									</a>
 								</article> -->
-							</section>
-						</div>
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Fique atualizado!</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Nome" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Mensagem"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Enviar" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Siga-nos</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Recicla APP Corp.</li>
-							</ul>
-						</div>
-					</footer>
-
+				</section>
 			</div>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<section>
+					<h2>Fique atualizado!</h2>
+					<form method="post" action="#">
+						<div class="fields">
+							<div class="field half">
+								<input type="text" name="name" id="name" placeholder="Nome" />
+							</div>
+							<div class="field half">
+								<input type="email" name="email" id="email" placeholder="Email" />
+							</div>
+							<div class="field">
+								<textarea name="message" id="message" placeholder="Mensagem"></textarea>
+							</div>
+						</div>
+						<ul class="actions">
+							<li><input type="submit" value="Enviar" class="primary" /></li>
+						</ul>
+					</form>
+				</section>
+				<section>
+					<h2>Siga-nos</h2>
+					<ul class="icons">
+						<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a>
+						</li>
+						<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
+						</li>
+						<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a>
+						</li>
+					</ul>
+				</section>
+				<ul class="copyright">
+					<li>&copy; Recicla APP Corp.</li>
+				</ul>
+			</div>
+		</footer>
 
-	</body>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
